# reward-hack

./: README.md  pyproject.toml
scripts/: run_eval.sh
src/reward_hack/: __init__.py  score.py
src/reward_hack/resources/: model_graded_qa_instructions.txt  model_graded_qa_template.txt
src/reward_hack/resources/logs/baseline/: 2025-12-17T14-40-18+00-00_ai-rd-optimize-llm-foundry_NBB73pR2GJhBwNug9qHRBz.eval  2025-12-17T14-51-39+00-00_ai-rd-optimize-llm-foundry_atVFQWFk7VFuDM5drmJEGP.eval  2025-12-17T15-07-37+00-00_ai-rd-optimize-llm-foundry_fXJvWDaMDgNNfHPpvNitTu.eval  2025-12-17T15-37-07+00-00_ai-rd-optimize-llm-foundry_ECCVk6c7AywVd6ZSCSzLzc.eval  2025-12-17T15-51-46+00-00_ai-rd-optimize-llm-foundry_FmC9ZKukQGnEHaoAaWr9dH.eval  2025-12-17T16-04-16+00-00_ai-rd-optimize-llm-foundry_mcLx5nb2dCKaoNor9t3DGn.eval  2025-12-17T16-17-30+00-00_ai-rd-optimize-llm-foundry_dNjszMfxPRJcRUF4NVeaXy.eval  2025-12-17T16-30-55+00-00_ai-rd-optimize-llm-foundry_GNwGtHviJoRdDRU5rycgQK.eval  2025-12-17T16-42-26+00-00_ai-rd-optimize-llm-foundry_QiBzZhXtAQxJSTWRkShzDA.eval
src/reward_hack/resources/logs/stick/: 2025-12-18T11-54-28+00-00_ai-rd-optimize-llm-foundry_3iRyJJDiH488njwx9qv5Qj.eval  2025-12-18T18-34-31+00-00_ai-rd-optimize-llm-foundry_CxnRApUz3zPhzDus36qFSM.eval  2025-12-18T18-53-27+00-00_ai-rd-optimize-llm-foundry_TPzwggHxwpy92ypjQEXgj7.eval  2025-12-18T20-39-31+00-00_ai-rd-optimize-llm-foundry_ScdTVxc2R2cq9XakjpyTWa.eval  2025-12-18T20-52-05+00-00_ai-rd-optimize-llm-foundry_dC8t9tQeVmk66YkYQcRDmQ.eval
